# youtube_knwoledge

./: .env.example  .gitignore  AGENT_THINKING.md  ARCHITECTURE.md  BUG_FIX_CHUNK_IDS.md  CHANGES_SUMMARY.txt  CONFIGURATION_SYSTEM_COMPLETE.md  CONFIG_README.md  DEDUPLICATION_IMPLEMENTATION.md  DEDUPLICATION_README.md  DELIVERABLES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATION_GUIDE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_STREAMLIT.md  README_THINKING.md  RELEASE_NOTES.md  SETUP_CONFIG_SYSTEM.sh  TESTING_GUIDE.md  USER_GUIDE.md  compressor.py  download_youtube_channel_subtitles.py  plan.md  pyproject.toml  requirements.txt  start_viewer.sh  streamlit_app.py  streamlit_app.py.backup_20251203
config/presets/: custom_template.yaml  embeddings_only.yaml  full_pipeline.yaml  (+2 more)
docs/: CONFIGURATION.md  CONFIGURATION_SYSTEM_SUMMARY.md  PHASE_1_COMPLETE.md  plan.md
examples/: cli_examples.py
notebooks/: exploration.ipynb
scripts/: backup_database.py  check_duplicates.py  clear_checkpoints.py  debug_duplicates.py  example_thinking_display.py  explore_vector_db.py  migrate_to_content_dedup.py  migrate_to_documents.py  process_subtitles.py  query_subtitles.py  rebuild_index.py  reset_database.py  show_hardware_profile.py  test_config.py  test_deduplication.py  view_vector_db.py
src/: __init__.py
tests/: __init__.py  test_clustering.py  test_db_commands.py  test_embeddings.py  test_hardware_detector.py  test_performance_optimizer.py  test_preprocessing.py  test_retrieval.py
(+650 files in other folders)
